kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprapp
  labels:
    app: vprapp
spec:
  replicas: 1  # Number of Memcached pod replicas
  selector:
    matchLabels:
      app: vprapp
  template:
    metadata:
      labels:
        app: vprapp
    spec:
      containers:
      - name: vprapp
        image: vprocontainers/vprofileapp  # Specify the Memcached container image
        ports:
        - name: vprapp-port
          containerPort: 8080  # Tomcat default port
