kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
  labels:
    app: vprormq
spec:
  replicas: 1  # Number of replicas
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
      labels:
        app: vprormq
    spec:
      containers:
      - name: vprormq
        image: rabbitmq 
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vprormq
        ports:
        - name: vprormq-port
          containerPort: 5672  # Container port for the rabbitmq server
