kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
    - protocol: TCP
      port: 8080  # Service port exposed to other resources in the cluster
      targetPort: vprapp-port  # Port on the pod (container) 8080
  selector:
    app: vprapp  # Matches the pods with this label
  
  type: ClusterIP  # Default service type
