kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    app: vprodb  # Matches the pods with this label
  ports:
    - protocol: TCP
      port: 3306  # Service port exposed to other resources in the cluster
      targetPort: vprodb-port  # Port on the pod (container) 3306
  type: ClusterIP  # Default service type
