kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01  #this name should match with configuration file i.e application.properties
spec:
  ports:
    - protocol: TCP
      port: 5672  # Service port exposed to other resources in the cluster
      targetPort: vprormq-port  # Port on the pod (container) 5672
  selector:
    app: vprormq  # Matches the pods with this label
  
  type: ClusterIP  # Default service type
